# case-converter

./: .gitignore  CHANGELOG.md  CI_CD計画書.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  要件定義.md
.github/workflows/: build.yml  publish_formula.yml  release.yml
kanban/0001_fix_upper_snake_to_pascal/: 0001_fix_upper_snake_to_pascal.md  log.md
kanban/0002_test_all_case_conversions/: 0002_test_all_case_conversions.md  log.md
kanban/0003_bump_minor_version/: 0003_bump_minor_version.md  log.md
kanban/0004_update_cargo_toml_binary_name/: 0004_update_cargo_toml_binary_name.md  log.md
kanban/0005_increment_patch_version/: 0005_increment_patch_version.md  log.md
kanban/0006_revert_package_name/: 0006_revert_package_name.md  log.md
kanban/0007_design_product_about/: 0007_design_product_about.md  log.md
kanban/0008_plan_next_version/: 0008_plan_next_version.md  log.md
kanban/0009_add_homebrew_to_readme/: 0009_add_homebrew_to_readme.md  log.md
kanban/0010_add_changelog/: 0010_add_changelog.md  log.md
kanban/0011_prepare_v1_1_3_release/: 0011_prepare_v1_1_3_release.md  RELEASE_NOTES_v1.1.3.md  log.md
src/: main.rs
