[package]
name = "case-converter"
version = "0.1.4"
edition = "2021"
description = "A CLI tool to convert text between different cases"
license = "MIT"
repository = "https://github.com/sinofseven/case-converter"
homepage = "https://github.com/sinofseven/case-converter"
documentation = "https://docs.rs/case-converter"
readme = "README.md"
keywords = ["cli", "case", "converter", "text"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
