[package]
name = "luciferous-case-converter"
version = "1.0.0"
edition = "2021"
description = "A CLI tool to convert text between different cases"
license = "MIT"
repository = "https://github.com/sinofseven/case-converter"
homepage = "https://github.com/sinofseven/case-converter"
documentation = "https://docs.rs/luciferous-case-converter"
readme = "README.md"
keywords = ["cli", "case", "converter", "text"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "case-converter"
path = "src/main.rs"
