[package]
name = "luciferous-case-converter"
version = "1.1.3"
edition = "2024"
description = "Convert text between case styles: snake_case, camelCase, PascalCase, kebab-case and more."
license = "MIT"
repository = "https://github.com/sinofseven/case-converter"
homepage = "https://github.com/sinofseven/case-converter"
documentation = "https://docs.rs/luciferous-case-converter"
readme = "README.md"
keywords = ["cli", "case", "converter", "text"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "case-converter"
path = "src/main.rs"
